ISAICP-2755: Fix spacing in propose collection form

--- a/web/themes/joinup/prototype/sass/components/_vertical-tabs.sass
+++ b/web/themes/joinup/prototype/sass/components/_vertical-tabs.sass
@@ -5,7 +5,6 @@
 // Component
 // --------------------------------------------------
 .vertical-tabs
-  padding: 0
   margin-bottom: 40px
 
 // Elements
@@ -16,7 +15,6 @@
 .vertical-tabs__panes
   padding: 20px
   background-color: #fff
-  margin: 0
   +breakpoint(tablet)
     padding: 40px 30px
   +breakpoint(desktop)
@@ -29,11 +27,7 @@
   display: none
 
 .vertical-tabs__menu
-  margin: 5px 0 0 0
   padding-left: 0
-  +breakpoint(mobile)
-    margin: 0
-
 
 .vertical-tabs__menu-item
   display: block
@@ -54,9 +48,6 @@
   margin-top: 4px
   color: $color-grey-medium
   display: block
-
-.vertical-tabs__sidebar
-    margin-left: 40px
 
 // Modifiers
 // --------------------------------------------------
