--- a/web/themes/joinup/prototype/sass/layouts/_layout.sass
+++ b/web/themes/joinup/prototype/sass/layouts/_layout.sass
@@ -12,17 +12,18 @@ div
   max-width: $container-desktop
   width: 100%
   box-sizing: border-box
+  padding: 0
 
 .content-container
   max-width: 784px
   width: 100%
 
 .content-container--form
-  max-width: $container-desktop
   width: 100%
   .page__content
     padding: 0
     background-color: transparent
+    width: 100%
     +breakpoint(tablet)
       padding: 0
     +breakpoint(desktop)
